refactor: improve code quality and documentation
- Update README to match service template format
- Remove unused searchByQuery repository method
- Add AAA comments to all unit test methods
- Apply code formatting fixes

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>